#57 Refactor tests to StringSpec, rename onDirty to flush, fix check/build task graph, suppress Unsafe warnings, fix closeOnEmpty race condition