@@ -128,6 +128,12 @@ subprojects {
         }
     }
 
+    tasks.withType(Test).configureEach {
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+                '--add-opens=java.base/java.io=ALL-UNNAMED'
+    }
+
     jacocoTestReport {
         reports {
             xml.required = true
